<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>sentence-joiner</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
        <jbpt.version>0.3.1</jbpt.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>uk.ac.abdn</groupId>
            <artifactId>SimpleNLG</artifactId>
            <version>4.5.0</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.jbpt</groupId>
            <artifactId>jbpt</artifactId>
            <version>${jbpt.version}</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>org.jbpt</groupId>
            <artifactId>jbpt-core</artifactId>
            <version>${jbpt.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jbpt</groupId>
            <artifactId>jbpt-deco</artifactId>
            <version>${jbpt.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jbpt</groupId>
            <artifactId>jbpt-petri</artifactId>
            <version>${jbpt.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jbpt</groupId>
            <artifactId>jbpt-bpm</artifactId>
            <version>${jbpt.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jbpt</groupId>
            <artifactId>jbpt-bp</artifactId>
            <version>${jbpt.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
    </dependencies>

</project>